# test-competencias

./: .env  README.md  db.sqlite3  hello.py  pyproject.toml
api/: settings.py  urls.py
api/management/commands/: telegram_bot.py
api/v1/: urls.py
api/v1/ingrediente/: models.py  serializers.py  views.py
api/v1/ingrediente/tests/: test_views.py
api/v1/migrations/: 0001_initial.py  0002_plato.py
api/v1/plato/: models.py  serializers.py  views.py
api/v1/plato/tests/: view_test.py
